kubernetes/labs/admin/spread.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-spread
  namespace: tk-bank
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bank-spread
  template:
    metadata:
      labels:
        app: bank-spread
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: bank-spread
      containers:
        - name: web
          image: nginx:1.28.0-alpine
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 64Mi
